@@ -49,6 +49,10 @@ def test_auto_shorthelp(runner):
         """This is a short text."""
 
     @cli.command()
+    def special_chars():
+        """Login and store the token in ~/.netrc."""
+
+    @cli.command()
     def long():
         """This is a long text that is too long to show as short help
         and will be truncated instead."""
@@ -57,7 +61,9 @@ def test_auto_shorthelp(runner):
     assert re.search(
         r'Commands:\n\s+'
         r'long\s+This is a long text that is too long to show\.\.\.\n\s+'
-        r'short\s+This is a short text\.', result.output) is not None
+        r'short\s+This is a short text\.\n\s+'
+        r'special_chars\s+Login and store the token in ~/.netrc\.\s*',
+        result.output) is not None
 
 
 def test_default_maps(runner):
